--- a/HuntBuddy/HuntBuddy.csproj
+++ b/HuntBuddy/HuntBuddy.csproj
@@ -18,6 +18,10 @@
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Dalamud.dll</HintPath>
             <Private>False</Private>
         </Reference>
+        <Reference Include="FFXIVClientStructs">
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\FFXIVClientStructs.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
         <Reference Include="ImGui.NET">
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\ImGui.NET.dll</HintPath>
             <Private>False</Private>
@@ -40,9 +44,6 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="DalamudPackager" Version="2.1.7" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\FFXIVClientStructs\FFXIVClientStructs\FFXIVClientStructs.csproj" />
+        <PackageReference Include="DalamudPackager" Version="2.1.7"/>
     </ItemGroup>
 </Project>
